tests/agl/rejections/type/extern_function_param.agl
extern def apply(cb: (int) -> int) -> int
0
